# FormBa-pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: main.py
backend/app/: database.py  download_utils.py  models.py  schemas.py
backend/app/routers/: auth.py
backend/ocr_ner/: data_extractor.py
backend/ocr_ner/config/: config.yaml
backend/ocr_ner/config/prompts/: aadhaar.txt  caste.txt  school_cert.txt  school_mark.txt  uni_cert.txt  uni_mark.txt
backend/ocr_ner/src/: document_loader.py  ner_processor.py  ocr_engine.py  pipeline.py  preprocessor.py
backend/post_processing/: config.py  post_processing.py
backend/post_processing/tasks/: clean_names.py  clean_roll.py  clean_school_name.py  handle_aadhaar.py  handle_dob.py  handle_null_values.py  handle_special_chars.py  map_caste_category.py  normalize_division.py  normalize_gender.py  normalize_passout.py  remove_marks.py  standardize_caste_name.py
backend/script/: create_admin.py
frontend/: review_index.html
frontend/css/: style.css
frontend/js/: main.js
frontend/static/: index.html  login.html  register.html
