[project]
name = "extraction-ner-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.26.0",
    "bitsandbytes>=0.45.3",
    "fitz>=0.0.1.dev2",
    "huggingface-hub>=0.29.1",
    "ipykernel>=6.29.5",
    "json5>=0.10.0",
    "opencv-python>=4.11.0.86",
    "paddleocr>=2.9.1",
    "paddlepaddle>=2.6.2",
    "pip>=25.0.1",
    "pymupdf>=1.25.3",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "setuptools>=75.8.2",
    "transformers>=4.49.0",
]
