[project]
name = "extraction-ner-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.26.0",
    "aiohttp>=3.11.16",
    "bitsandbytes>=0.45.3",
    "boto3>=1.37.27",
    "cryptography>=44.0.2",
    "fastapi>=0.115.12",
    "fitz>=0.0.1.dev2",
    "huggingface-hub>=0.29.1",
    "ipykernel>=6.29.5",
    "json5>=0.10.0",
    "opencv-python>=4.11.0.86",
    "paddleocr>=2.9.1",
    "paddlepaddle>=2.6.2",
    "passlib>=1.7.4",
    "pip>=25.0.1",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.10.6",
    "pymupdf>=1.25.3",
    "python-dotenv>=1.0.1",
    "python-jose>=3.4.0",
    "pyyaml>=6.0.2",
    "setuptools>=75.8.2",
    "sqlalchemy==2.0.25",
    "transformers>=4.49.0",
    "uvicorn>=0.34.0",
]
